Ouverture + Modification de fiche possible - code de malpropre

--- a/UI_Editeur/.gitignore
+++ b/UI_Editeur/.gitignore
@@ -7,6 +7,11 @@
 [Ll]ibrary/
 sysinfo.txt
 *.stackdump
+
+# ============== #
+# Our files      #
+# ============== #
+ Fiches/
  
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
