Centrage auto de la caméra

--- a/Labyrinthe2D/Assembly-CSharp.csproj
+++ b/Labyrinthe2D/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CamCentering.cs" />
      <Compile Include="Assets\Scripts\MazeGen.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Programmes/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
