--- a/Menu principal/Menu principal.CSharp.csproj
+++ b/Menu principal/Menu principal.CSharp.csproj
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Games\Board\Assets\Line.cs" />
+    <Compile Include="Assets\Games\Board\Assets\Scripts\Bonus.cs" />
     <Compile Include="Assets\Games\Board\Assets\Scripts\Coordinator.cs" />
     <Compile Include="Assets\Games\Board\Assets\Scripts\Dice.cs" />
     <Compile Include="Assets\Games\Board\Assets\Scripts\Map.cs" />
@@ -70,10 +72,12 @@
     <Compile Include="Assets\Games\Labyrinth\Assets\Scripts\MazeGen.cs" />
     <Compile Include="Assets\Games\Labyrinth\Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Games\Labyrinth\Assets\Scripts\keyscript.cs" />
+    <Compile Include="Assets\Scripts\GameState.cs" />
     <Compile Include="Assets\Scripts\Games.cs" />
     <Compile Include="Assets\Scripts\LoadOnClick.cs" />
+    <Compile Include="Assets\Scripts\MenuButtons.cs" />
     <Compile Include="Assets\Scripts\Navigator.cs" />
-    <Compile Include="Assets\Scripts\Title screen.cs" />
+    <Compile Include="Assets\Scripts\TitleScreen.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
