--- a/Menu principal/Menu principal.CSharp.csproj
+++ b/Menu principal/Menu principal.CSharp.csproj
@@ -86,8 +86,13 @@
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\DialogManager.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJ.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJBehaviour.cs" />
+    <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Camille2.cs" />
+    <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Philibert2.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie0.cs" />
+    <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie1.cs" />
+    <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie2.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby1.cs" />
+    <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby2.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\StoryGameManager.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\StoryLoader.cs" />
     <Compile Include="Assets\Games\Narrative\Assets\Scripts\StoryPlayer.cs" />
