Ajout des Fiches sans texte de réponse
C'est a dire des fiches ou les réponse sont écrite sur l'image
et il ya juste les 3 boutons avec les symbole :
- Carré Bleu
- Triangle Rouge
- Rond Vert

Mais ils sont moche pour le moment

--- a/Menu principal/Menu principal.CSharp.csproj
+++ b/Menu principal/Menu principal.CSharp.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Assets\Games\Sheets\Assets\Scripts\Question.cs" />
     <Compile Include="Assets\Games\Sheets\Assets\Scripts\Questionnaire.cs" />
     <Compile Include="Assets\Games\Sheets\Assets\Scripts\Sheet.cs" />
+    <Compile Include="Assets\Games\Sheets\Assets\Scripts\SheetWithAnswerText.cs" />
     <Compile Include="Assets\Scripts\Credits.cs" />
     <Compile Include="Assets\Scripts\Fading.cs" />
     <Compile Include="Assets\Scripts\GameState.cs" />
