--- a/Menu principal/Assembly-CSharp.csproj
+++ b/Menu principal/Assembly-CSharp.csproj
@@ -85,10 +85,10 @@
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\StorySceneManager.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\Teleporter.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Exemple.cs" />
-     <Compile Include="Assets\Games\Sheets\Assets\Scripts\GlobalQuestionnaire.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Question.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Questionnaire.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Sheet.cs" />
+     <Compile Include="Assets\Games\Sheets\Assets\Scripts\SheetWithAnswerText.cs" />
      <Compile Include="Assets\Scripts\Credits.cs" />
      <Compile Include="Assets\Scripts\Fading.cs" />
      <Compile Include="Assets\Scripts\GameState.cs" />
@@ -100,6 +100,7 @@
      <Compile Include="Assets\Scripts\Profile.cs" />
      <Compile Include="Assets\Scripts\ProfileManager.cs" />
      <Compile Include="Assets\Scripts\ProfileMenu.cs" />
+     <Compile Include="Assets\Scripts\SheetInfos.cs" />
      <Compile Include="Assets\Scripts\TitleScreen.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
