--- a/Menu principal/Assembly-CSharp.csproj
+++ b/Menu principal/Assembly-CSharp.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_3;UNITY_5_3;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_3_4;UNITY_5_3;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_SPRITE_POLYGON;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;ENABLE_EDITOR_TESTS_RUNNER;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -38,10 +38,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+      <HintPath>D:/Programmes/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>D:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+      <HintPath>D:/Programmes/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -72,12 +72,24 @@
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJ.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJBehaviour.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Camille2.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Camille3.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Charlotte3.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Olivier6.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Philibert2.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie0.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie1.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie2.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie3.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Pixie7.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Thierry5.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Victor4.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\Victor5.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby1.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby2.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby3.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby4.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\PNJs\gaby5.cs" />
+     <Compile Include="Assets\Games\Narrative\Assets\Scripts\SkipArrow.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\SoundManager.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\StoryGameManager.cs" />
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\StoryLoader.cs" />
@@ -86,8 +98,11 @@
      <Compile Include="Assets\Games\Narrative\Assets\Scripts\Teleporter.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Exemple.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Question.cs" />
+     <Compile Include="Assets\Games\Sheets\Assets\Scripts\QuestionWithText.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Questionnaire.cs" />
+     <Compile Include="Assets\Games\Sheets\Assets\Scripts\ReadingSheet.cs" />
      <Compile Include="Assets\Games\Sheets\Assets\Scripts\Sheet.cs" />
+     <Compile Include="Assets\Games\Sheets\Assets\Scripts\TextReadingSheet.cs" />
      <Compile Include="Assets\Scripts\Credits.cs" />
      <Compile Include="Assets\Scripts\Fading.cs" />
      <Compile Include="Assets\Scripts\GameState.cs" />
@@ -103,10 +118,10 @@
      <Compile Include="Assets\Scripts\SheetInfos.cs" />
      <Compile Include="Assets\Scripts\TitleScreen.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>D:/Programmes/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
- <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ <HintPath>D:/Programmes/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
